# accountsservice

./: .gitignore  .gitlab-ci.yml  AUTHORS  Makefile.am  Makefile.in  NEWS  README.md  accountsservice.doap  aclocal.m4  config.h.in  configure  configure.ac  generate-version.sh  meson.build  meson_options.txt  meson_post_install.py
data/: Makefile.in  accounts-daemon.service.in  meson.build  org.freedesktop.accounts.policy.in
debian/: accountsservice.install  accountsservice.install.linux.in  accountsservice.maintscript  accountsservice.postinst  accountsservice.prerm  changelog  control  copyright  gbp.conf  libaccountsservice-doc.install  libaccountsservice-doc.links  libaccountsservice-doc.maintscript  libaccountsservice0.symbols  rules  watch
debian/patches/: 0001-do-not-consider-system-users-returned-from-consolekit.patch  0001-formats-locale-property.patch  0001-user-Remove-user-from-extra_admin_groups-when-demoti.patch  0002-create-and-manage-groups-like-on-a-debian-system.patch  0002-create-and-manage-groups-like-on-a-ubuntu-system.patch  0003-getpwnam_null_crash.patch  0004-history-filter-sessions.patch  0005-gdm_config_file_path.patch  0006-adduser_instead_of_useradd.patch  0007-add-lightdm-support.patch  0008-nopasswdlogin-group.patch  0009-language-tools.patch  0010-set-language.patch  0011-add-background-file-support.patch  0012-add-keyboard-layout-support.patch  0013-add-has-message-support.patch  0014-libsystemd.patch  0015-debian-nologin-path.patch  0016-add-input-sources-support.patch  0016-user-fix-insufficient-path-prefix-check.patch  0021-support-extrausers.patch  1001-move-dbus-conf-file.patch  1002-dont-override-standardoutput.patch  2001-filtering_out_users.patch  2001-icon_reset.patch  3001-show_more_than_one_user_powerpc.patch  9001-memory_leaks.patch  9004-ActUserManagerNewSession-do-not-free-if-there-are-pe.patch  adduser_invocation.patch  adm-group.patch  build-Add-missing-pkg-config-Requires.private-dependencie.patch  default-groups.patch  gitlab_change_types.patch  gitlab_shared_tmp.patch  jammy.patch  series  setlocked_signature.patch  ubuntu.series
debian/tests/: build  control  pygi.py
doc/: Makefile.in  org.mydm.MyDisplayManager.Wallpaper.xml  org.mydm.MyDisplayManager.policy
doc/dbus/: AccountsService.xml  Makefile.in  meson.build  org.freedesktop.Accounts.User.ref.xml  org.freedesktop.Accounts.ref.xml
doc/libaccountsservice/: Makefile.in  libaccountsservice-docs.xml  libaccountsservice-sections.txt  meson.build
doc/libaccountsservice/html/: ActUser.html  ActUserManager.html  annotation-glossary.html  api-index-full.html  ch01.html  index.html  index.sgml  libaccountsservice.devhelp2
po/: LINGUAS  POTFILES.in  POTFILES.skip  af.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn_IN.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  el.po  en.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  fur.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  it.po  ja.po  (+38 more)
src/: Makefile.am  Makefile.in  accounts-generated.c  accounts-generated.h  accounts-user-generated.c  accounts-user-generated.h  daemon.c  daemon.h  extensions.c  fgetpwent.c  main.c  meson.build  user-classify.c  user-classify.h  user.c  user.h  util.c  util.h  wtmp-helper.c  wtmp-helper.h
src/libaccountsservice/: Makefile.am  Makefile.in  accountsservice.pc  act-user-enum-types.c  act-user-enum-types.h  act-user-manager.c  act-user-manager.h  act-user.c  act-user.h  ck-manager-generated.c  ck-manager-generated.h  ck-seat-generated.c  ck-seat-generated.h  ck-session-generated.c  ck-session-generated.h  meson.build
tests/: meson.build  test-libaccountsservice.py
